--- a/life_exp_analysis.Rmd
+++ b/life_exp_analysis.Rmd
@@ -13,5 +13,19 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Here, I re-examine the analysis of Oeppen and Vaupel (2002)
 
-# Analysis
+# Life Expectancy Analysis
 
+```{r}
+library(gapminder)
+library(tidyverse)
+
+gapminder %>%
+  select(country,year,lifeExp) %>%
+  group_by(year) %>%
+  filter(lifeExp == max(lifeExp))
+
+
+
+```
+
+  
